--- a/package.json
+++ b/package.json
@@ -28,16 +28,24 @@
     "@uppy/react": "^4.2.3",
     "@uppy/tus": "^4.2.2",
     "dotenv": "^16.4.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "papaparse": "^5.5.2",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ws": "^8.18.0"
+    "slugify": "^1.6.6",
+    "ws": "^8.18.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.5.14",
